# dylib_dobby_hook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  SKILL.md  build.sh  supported-apps.md
.github/ISSUE_TEMPLATE/: --app-name---app-version--bug-report.md  bug_report.md
.github/workflows/: Builder.yml
dylib_dobby_hook/: AirBuddyHack.h  AirBuddyHack.m  AnyGoHack.m  Constant.h  Constant.m  DevHack.m  DevUtilsHack.h  DevUtilsHack.m  EndelHack.m  HackProtocol.h  LightRoomHack.m  MemoryUtils.h  MemoryUtils.m  MovistProHack.m  NavicatPremiumHack.h  NavicatPremiumHack.m  PaddleBaseHack.m  PasteHack.h  PasteHack.m  ProxyManHack.m  SurgeHack.m  TablePlusHack.h  TablePlusHack.m  TransmitHack.m  common_ret.c  common_ret.h  dobby.h  dylib_dobby_hook.h  dylib_dobby_hook.m  tinyhook.h
dylib_dobby_hook.xcodeproj/: project.pbxproj
dylib_dobby_hook.xcodeproj/project.xcworkspace/xcuserdata/voidm.xcuserdatad/: UserInterfaceState.xcuserstate
dylib_dobby_hook.xcodeproj/xcshareddata/xcschemes/: dylib_dobby_hook.xcscheme  dylib_dobby_hook_ios.xcscheme  dylib_dobby_hook_mac.xcscheme
dylib_dobby_hook.xcodeproj/xcuserdata/artemis.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
dylib_dobby_hook.xcodeproj/xcuserdata/artemis.xcuserdatad/xcschemes/: xcschememanagement.plist
dylib_dobby_hook.xcodeproj/xcuserdata/voidm.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
dylib_dobby_hook/apps/: AirBuddyHack.m  AlfredHack.m  BoltAIHack.m  CleanMyMacHack.m  CleanShotXHack.m  DevHack.m  DevUtilsHack.m  ForkLiftHack.m  HackProtocol.h  HackProtocolDefault.h  HackProtocolDefault.m  IDAHack.m  InfuseHack.m  JSONUtils.h  JSONUtils.m  LightRoomHack.m  LiveWallpaperHack.m  MacUpdaterHack.m  MovistProHack.m  NavicatPremiumHack.m  NotchNook.m  PaddleBaseHack.m  PasteHack.m  ProxyManHack.m  SenPlayerHack.m  ShottrHack.m  TablePlusHack.m  TransmitHack.m  iStat7Hack.m  irvueHack.m  ishotHack.m
dylib_dobby_hook/common/: CommonRetOC.h  CommonRetOC.m  Constant.m  EncryptionUtils.h  EncryptionUtils.m  InstructionDecoder.h  InstructionDecoder.m  JSONUtils.h  LocalizationManager.h  LocalizationManager.m  Logger.h  MemoryUtils.h  MemoryUtils.m  MockCKContainer.h  MockCKDatabase.h  MockCKDatabase.m  MockKeychain.h  MockKeychain.m  MockUbiquitousKeyValueStore.h  MockUbiquitousKeyValueStore.m  URLSessionHook.m  common_ret.h  common_ret.m
dylib_dobby_hook/helpers/: ForkLiftHelperHack.m  HackHelperProtocolDefault.h  HackHelperProtocolDefault.m  ProxymanHelperHack.m
dylib_dobby_hook/ios/apps/: DevHack.m  DramaBoxHack.m  EndelHack.m  HACK-HackerNews.m  HackProtocol.h  HackProtocolDefault.h  HackProtocolDefault.m  HackerNewsHack.m  loveReadHack.m
dylib_dobby_hook/ios/helpers/: HackHelperProtocolDefault.m
dylib_dobby_hook/mac/apps/: AirBuddyHack.m  AlfredHack.m  Bartender.m  CleanMyMacHack.m  CleanShotXHack.m  Clop.m  DeskWidgetHack.m  DevHack.m  DevUtilsHack.m  FolderPreviewPro.m  ForkLiftHack.m  HackProtocolDefault.h  HackProtocolDefault.m  IDAHack.m  InfuseHack.m  JumpDeskHack.m  LiveWallpaperHack.m  NavicatPremiumHack.m  NotchNook.m  PaddleBaseHack.m  PasteHack.m  ProgressiveDownloader.m  ProxyManHack.m  SenPlayerHack.m  ShottrHack.m  TablePlusHack.m  TransmitHack.m  VidhubHack.m  iStat7Hack.m  irvueHack.m  ishotHack.m
dylib_dobby_hook/mac/helpers/: CleanMyMacAgentHack.m  ForkLiftHelperHack.m  HackHelperProtocolDefault.h  ProxymanHelperHack.m
dylib_dobby_hook/mac/utils/: AppInspector.m
dylib_dobby_hook/tableplus/: HPDecoder.h  LicenseModel.h  Mapper.h
dylib_dobby_hook/utils/: CommonRetOC.h  CommonRetOC.m  Constant.h  Constant.m  EncryptionUtils.h  EncryptionUtils.m  JSONUtils.h  JSONUtils.m  LocalizationManager.m  Logger.h  MemoryUtils.h  MemoryUtils.m  MockCKContainer.h  MockCKContainer.m  MockCKDatabase.h  MockCKDatabase.m  MockKeychain.h  MockKeychain.m  MockUbiquitousKeyValueStore.m  URLSessionHook.h  URLSessionHook.m  common_ret.c  common_ret.h  common_ret.m  encryp_utils.h  encryp_utils.m
release/: libdobby.dylib  libdylib_dobby_hook.dylib
release/mac/: EMPTY
script/: all_in_one.sh  apps.json  apps.schema.json  auto_dynamic_hack.sh  auto_hack  auto_hack.py  auto_hack.sh  auto_hack.swift  cmake_debugger.sh  dmg_builder.sh  hack.sh  lightroom_hack.sh  surge_hack.sh
script/apps/: airbuddy_hack.sh  alfred_hack.sh  fix_helper.sh  fix_helper_and_inject.sh  forklift_hack.sh  ida_hack.sh  paddle.sh  surge_dynamic_hack.sh
script/apps/IDA/: ida.hexlic  ida.py  idapro.hexlic  keygen2.py  keygen3.py
script/apps/IDA/plugins/: patching.py
script/apps/IDA/plugins/patching/: actions.py  asm.py  core.py  exceptions.py
script/apps/IDA/plugins/patching/keystone/: README.md
script/apps/IDA/plugins/patching/ui/: preview.py  preview_ui.py  save.py  save_ui.py
script/apps/IDA/plugins/patching/util/: ida.py  misc.py  python.py  qt.py
tools/: cfg.data  check_insert_space.sh  dtrace_kill.d  dynamic_inject  enable-unified-log-private-data.mobileconfig  insert_dylib  mac_patch_helper  mac_patch_helper_back  patch.json  process_inject
tools/Organismo-mac.framework/: Organismo-mac  start_inspector
tools/Organismo-mac.framework/Versions/A/: Organismo-mac
tools/Organismo-mac.framework/Versions/A/Headers/: Organismo.h
tools/Organismo-mac.framework/Versions/A/Resources/: Assets.car  Info.plist  ORGInspectorWindowController.nib
tools/Organismo-mac.framework/Versions/A/_CodeSignature/: CodeResources
